2011-03-11  Ingo Weinzierl <ingo@intevation.de>

	* src/de/bielefeld/umweltamt/aui/module/common/editors/ProbenEditor.java:
	  Wenn die kasse.txt beim Erstellen eines Gebührenbescheides vorhanden
	  ist, wird nun für den aktuellen Bescheid eine neue Zeile eingefügt. Die
	  Daten der kasse.txt bleiben bestehen.

2011-03-11  Ingo Weinzierl <ingo@intevation.de>

	* reports/verfuegung.jrxml: Neu. Ein Template für Verfügungen.

2011-03-11  Ingo Weinzierl <ingo@intevation.de>

	* src/de/bielefeld/umweltamt/aui/utils/GermanDouble.java: Neu. Diese
	  Klasse stellt einen Wrapper um Fließkommazahlen dar. Eine toString()
	  Methode liefert den Wert der Fließkommazahl als String nach deutscher
	  Formatierung mti einem Tausender-Trenner. Diese Klasse wurde
	  hinzugefügt, um die Symmetrie des Programms aufrecht zu erhalten - es
	  gibt bereits eine Klasse KommaDouble, die ebenfalls einen Wrapper um
	  Fließkommazahlen darstellt.

	* src/de/bielefeld/umweltamt/aui/module/common/editors/ProbenEditor.java

	* src/de/bielefeld/umweltamt/aui/mappings/atl/AtlProbenahmen.java: Alle
	  Zahlenwerte werden nun von ihren Einheiten getrennt und als echte
	  Doubles in den JRMapDataSource geschrieben. Die Formatierung muss in den
	  Klassen stattfinden, die die JRMapDataSource benutzen.

	* reports/gebuehren_parameterliste.jrxml,
	  reports/gebuehrenbescheid.jrxml: Layout Anpassungen.

2011-02-15  Ingo Weinzierl <ingo@intevation.de>

	* src/de/bielefeld/umweltamt/aui/resources/version.txt: Version auf v1.1 RC1
	  aktualisiert.

	* src/de/bielefeld/umweltamt/aui/resources/revision.txt: Revision auf 162
	  aktualisiert.

	  HINWEIS: Dies muss noch immer manuell gemacht werden und birgt somit die
	  Gefahr, dass dies vergessen wird!

	* src/de/bielefeld/umweltamt/aui/HauptFrame.java: Copyright angepasst.

2011-02-15  Ingo Weinzierl <ingo@intevation.de>

	* *.java: Lizenzheader in alle Java Quellcode Dateien hinzugefügt.

	* LICENSE: Der Lizenztext der GNU Lesser General Public License.
